packages/lustre-v6.6.103.3/test/should_fail/semantics/aux.lus
node aux(ck: bool)
returns (x: int);
let
	x = pre(x) +1;
tel
